Add solution answer for 2H2

--- a/2H1_2H2.ipynb
+++ b/2H1_2H2.ipynb
@@ -16,9 +16,9 @@
    "source": [
     "### Terminology\n",
     "\n",
-    "Event $T_0$ means that the _first_ birth that a specific panda bear gives are twins. Consequently, event $T_i$ means that the $i$-th birth that the specific panda bear gives are twins.\n",
-    "\n",
-    "Event $A_0$ is short for the event that the specific panda bear is of species $A$ when we have already observed eventr $T_0$. Conversely, $B_0$ means the event that the specific panda bear is of species $B$ given that we have already observed $T_0$."
+    "Event $T_0$ means that the _first_ birth that a specific panda bear gives are twins. Consequently, event $T_i$ means that the $i$-th birth that the specific panda bear gives are twins. \n",
+    "<br>\n",
+    "Event $A$ is short for the event that the specific panda bear is of species $A$. Conversely, $B$ means the event that the specific panda bear is of species $B$."
    ]
   },
   {
@@ -186,6 +186,28 @@
    "metadata": {},
    "source": [
     "$$P(T_1 | T_0) = 0.1 \\cdot \\frac{1}{3} + 0.2 \\cdot \\frac{2}{3} = 0.1\\overline{6}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2H2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On our way we already have answered what 2H2 was aksing for:\n",
+    "$$P(A | T_0) = \\frac{0.1 \\cdot 0.5}{0.15} = \\frac{1}{3}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the probability that the panda is of species $A$ given the fact that we observed the first birth being twins is $\\frac{1}{3}$."
    ]
   },
   {
