Add more material for Chapter 3

--- a/notebooks/3E1.ipynb
+++ b/notebooks/3E1.ipynb
@@ -189,18 +189,20 @@
    "source": [
     "### Use gem croupier for sampling\n",
     "\n",
-    "Caution: We cannot use the water and land counts for having a sampling distribution. As compromise and approximation to that we use a Binomial distribution of success rate 0.65 with 9 draws. It will not match the exact values at the end - but hey. "
+    "Caution: We cannot use the water and land counts for having a sampling distribution. As compromise and approximation to that we use a Binomial distribution of success rate 0.65 with 9 draws. It will not match the exact values at the end - but hey, this is experimentation :) \n",
+    "\n",
+    "The below graph shows the histogram of 100 000 samples from that binomial distribution that is similar to our posterior from above yet not equal."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div id=\"chart-d10491f15332796052cbc0323f9785e8\" style=\"width: 100%; height: 300px;\"></div>\n",
+       "<div id=\"chart-f97f996de88a087bff2559114167b28c\" style=\"width: 100%; height: 300px;\"></div>\n",
        "<script>\n",
        "  require.config({\n",
        "    paths: {\n",
@@ -210,15 +212,15 @@
        "    }\n",
        "  });\n",
        "  require(['vega', 'vega-lite', 'vega-embed'], function(vega, vegaLite, vegaEmbed) {\n",
-       "    vegaEmbed(\"#chart-d10491f15332796052cbc0323f9785e8\", {\"$schema\":\"https://vega.github.io/schema/vega-lite/v4.json\",\"width\":\"container\",\"height\":\"container\",\"data\":{\"values\":[{\"x\":0.0,\"y\":4},{\"x\":0.1111111111111111,\"y\":143},{\"x\":0.2222222222222222,\"y\":876},{\"x\":0.3333333333333333,\"y\":4435},{\"x\":0.4444444444444444,\"y\":11736},{\"x\":0.5555555555555556,\"y\":22175},{\"x\":0.6666666666666666,\"y\":26892},{\"x\":0.7777777777777778,\"y\":21729},{\"x\":0.8888888888888888,\"y\":9946},{\"x\":1.0,\"y\":2064}]},\"mark\":{\"type\":\"area\"},\"encoding\":{\"x\":{\"field\":\"x\",\"type\":\"quantitative\"},\"y\":{\"field\":\"y\",\"type\":\"quantitative\"}}}, {\"actions\":false});\n",
+       "    vegaEmbed(\"#chart-f97f996de88a087bff2559114167b28c\", {\"$schema\":\"https://vega.github.io/schema/vega-lite/v4.json\",\"width\":\"container\",\"height\":\"container\",\"data\":{\"values\":[{\"x\":0.0,\"y\":13},{\"x\":0.1111111111111111,\"y\":125},{\"x\":0.2222222222222222,\"y\":989},{\"x\":0.3333333333333333,\"y\":4203},{\"x\":0.4444444444444444,\"y\":11802},{\"x\":0.5555555555555556,\"y\":21885},{\"x\":0.6666666666666666,\"y\":27163},{\"x\":0.7777777777777778,\"y\":21633},{\"x\":0.8888888888888888,\"y\":10109},{\"x\":1.0,\"y\":2078}]},\"mark\":{\"type\":\"area\"},\"encoding\":{\"x\":{\"field\":\"x\",\"type\":\"quantitative\"},\"y\":{\"field\":\"y\",\"type\":\"quantitative\"}}}, {\"actions\":false});\n",
        "  });\n",
        "</script>\n"
       ],
       "text/plain": [
-       "#<Vega::LiteChart:0x00007f86eaef89e0 @schema=\"https://vega.github.io/schema/vega-lite/v4.json\", @spec={\"$schema\"=>\"https://vega.github.io/schema/vega-lite/v4.json\", \"width\"=>\"container\", \"height\"=>\"container\", \"data\"=>{:values=>[{:x=>0.0, :y=>4}, {:x=>0.1111111111111111, :y=>143}, {:x=>0.2222222222222222, :y=>876}, {:x=>0.3333333333333333, :y=>4435}, {:x=>0.4444444444444444, :y=>11736}, {:x=>0.5555555555555556, :y=>22175}, {:x=>0.6666666666666666, :y=>26892}, {:x=>0.7777777777777778, :y=>21729}, {:x=>0.8888888888888888, :y=>9946}, {:x=>1.0, :y=>2064}]}, \"mark\"=>{:type=>\"area\"}, \"encoding\"=>{:x=>{:field=>\"x\", :type=>\"quantitative\"}, :y=>{:field=>\"y\", :type=>\"quantitative\"}}}>"
+       "#<Vega::LiteChart:0x00007f86efb61458 @schema=\"https://vega.github.io/schema/vega-lite/v4.json\", @spec={\"$schema\"=>\"https://vega.github.io/schema/vega-lite/v4.json\", \"width\"=>\"container\", \"height\"=>\"container\", \"data\"=>{:values=>[{:x=>0.0, :y=>13}, {:x=>0.1111111111111111, :y=>125}, {:x=>0.2222222222222222, :y=>989}, {:x=>0.3333333333333333, :y=>4203}, {:x=>0.4444444444444444, :y=>11802}, {:x=>0.5555555555555556, :y=>21885}, {:x=>0.6666666666666666, :y=>27163}, {:x=>0.7777777777777778, :y=>21633}, {:x=>0.8888888888888888, :y=>10109}, {:x=>1.0, :y=>2078}]}, \"mark\"=>{:type=>\"area\"}, \"encoding\"=>{:x=>{:field=>\"x\", :type=>\"quantitative\"}, :y=>{:field=>\"y\", :type=>\"quantitative\"}}}>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +256,7 @@
        "0.12082102852434257"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,6 +266,9 @@
     "# When you incorporate samples, you will\n",
     "# have to divide by the number of them i.O. \n",
     "# to normalize\n",
+    "#\n",
+    "#\n",
+    "# How much of the distribution is above 0.8?\n",
     "posterior\n",
     "  .select { |pair| pair[:x] > 0.8 }\n",
     "  .map { |pair| pair[:y] }\n",
@@ -272,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +286,7 @@
        "0.0008635325880233775"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,16 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.00147"
+       "0.00138"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1201"
+       "0.12187"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
