--- a/notebooks/3M.ipynb
+++ b/notebooks/3M.ipynb
@@ -101,8 +101,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 3M2 \n",
     "\n",
-    "# It looks like the mean is roughly at 0.525, so we will use that as approximation for croupier. "
+    "It looks like the mean is roughly at 0.525, so we will use that as approximation for croupier. "
    ]
   },
   {
