Add link in README for inline chapter snippets

--- a/notebooks/0_all_snippets_from_book.ipynb
+++ b/notebooks/0_all_snippets_from_book.ipynb
@@ -248,6 +248,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 0.15, 0.4, 0.45, 0.0]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ways.map { |item| item.to_f / ways.sum.to_f }"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
