Update README and add CHANGELOG

--- a/notebooks/3E.ipynb
+++ b/notebooks/3E.ipynb
@@ -326,16 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.12187"
+       "0.12223"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,8 +344,8 @@
     "# 3E2\n",
     "sampled_data\n",
     "  .to_a\n",
-    "  .select { |pair| pair.foir > 0.8 }\n",
-    "  .map { |pair| pair[:y] }\n",
+    "  .select { |pair| pair.first > 0.8 }\n",
+    "  .map { |pair| pair.last }\n",
     "  .sum.to_f / 100_000"
    ]
   },
